<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_repeat"
    android:orientation="vertical" >

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/content_attr"
            android:src="@drawable/big_logo" />
        
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        
	    <Button
	        android:id="@+id/btn_small"
	        style="@style/MainMenuButton"
	        android:layout_marginBottom="@dimen/menu_item_gap"
	        android:text="@string/btn_small" />
	
	    <Button
	        android:id="@+id/btn_medium"
	        style="@style/MainMenuButton"
	        android:layout_marginBottom="@dimen/menu_item_gap"
	        android:text="@string/btn_medium" />
	
	    <Button
	        android:id="@+id/btn_large"
	        style="@style/MainMenuButton"
	        android:text="@string/btn_large" />
	    
    </LinearLayout>

</LinearLayout>
